--- a/desafio02/package.json
+++ b/desafio02/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^9.0.3",
     "express": "^4.21.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.11.3"
   }
 }
