Add nodemon to auto restart server

--- a/desafio02/package.json
+++ b/desafio02/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "@faker-js/faker": "^9.0.3",
     "express": "^4.21.1",
     "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
