add anon volume for node_modules

--- a/desafio02/compose.yml
+++ b/desafio02/compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - '.:/home/node/app'
+      - '/home/node/app/node_modules'
     image: typevitor/nodeapp
     depends_on:
       db:
