--- a/desafio02/Dockerfile
+++ b/desafio02/Dockerfile
@@ -2,7 +2,8 @@ FROM node:18
 
 RUN groupmod -g 1001 node && usermod -u 1001 -g 1001 node
 
-RUN mkdir -p /home/node/app && chown -R node:node /home/node/app
+RUN mkdir -p /home/node/app &&\
+    chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
