--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.18
+          cache: 'npm'
+          cache-dependency-path: ./desafio04/package-lock.json
   
       - name: Run Tests
-        run: npm run test -coverage
+        run: npm run test --coverage
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
@@ -33,4 +35,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: desafio04/
+          projectBaseDir: ./desafio04/
