--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,10 @@ jobs:
           cache-dependency-path: ./desafio04/package-lock.json
   
       - name: Run Tests
-        run: npm run test --coverage
+        working-directory: ./desafio04
+        run: |
+          npm install
+          npm run test --coverage 
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
