feature: update name

--- a/desafio04/sonar-project.properties
+++ b/desafio04/sonar-project.properties
@@ -1,8 +1,7 @@
 sonar.projectKey=typevitor_fc-desafios
 sonar.organization=typevitor
 
-sonar.sources=.
-sonar.exclusions=**/*.test.js
+sonar.sources=src
 
 # Path to tests
 sonar.tests=test
