--- a/desafio04/sonar-project.properties
+++ b/desafio04/sonar-project.properties
@@ -8,4 +8,4 @@ sonar.tests=test
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
