--- a/desafio04/sonar-project.properties
+++ b/desafio04/sonar-project.properties
@@ -5,8 +5,7 @@ sonar.sources=src
 
 # Path to tests
 sonar.tests=test
-sonar.test.inclusions=.**/*.test.js
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
